# FYP

./: .gitignore  CMakeLists.txt  KDTreeCPU.cpp  KDTreeCPU.h  KDTreeStructs.cpp  KDTreeStructs.h  bunnies.json  bunnies_path.json  combine.py  compile  compile.sh  cubes_path.json  flipper.py  heatmap.cpp  intersections.h  main  main.cpp  make_animation  make_animation.sh  measure_hitdiff.cpp  mesh.cpp  mesh.h  path.json  ppmtopng.sh  psnr.cpp  run.sh  scaler.py  scene.json  single_bunny.json  ssim.cpp  translator.py  trimmer.py  vec3.h  visualize_sdf  visualize_sdf.cpp
headers/: BVH.hpp  KDTreeCPU.cpp  KDTreeCPU.h  KDTreeNode.cpp  intersections.h  mesh.cpp  mesh.h  structures.h  vec3.h
mesh_tools/: combine.py  sibenik_fixer.sh  triangler.py
scenes/: bunnies.json  bunnies_dragon.json  bunnies_simple.json  bunny_kitten.json  cornell.json  cube.json  diffbunnies.json  dragon_simple.json  dragons.json  dragons_kdtree.json  multi.json  planes.json  sibenik.json  slide.json  spheres.json
